--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "webpack": "^1.13.2"
   }
 }
