--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic front-end dev boilerplate",
   "main": "src/client/index.js",
   "scripts": {
-    "client-dev": "webpack-dev-server --colors --content-base public/ --hot --inline --host 127.0.0.1 --port 8877",
+    "client-dev": "webpack-dev-server --https --colors --content-base public/ --hot --inline --host 127.0.0.1 --port 8877",
     "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
