--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Basic front-end dev boilerplate",
   "main": "src/client/index.js",
   "scripts": {
+    "eslint": "eslint src",
     "client-dev": "webpack-dev-server --colors --content-base public/ --hot --inline --host 127.0.0.1 --port 8877",
     "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -37,6 +38,13 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-config-airbnb-base": "^5.0.3",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-plugin-react": "^6.2.0",
     "webpack-dev-server": "^1.15.0"
   }
 }
