--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "babel-core": "^6.17.0",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-config-airbnb-base": "^5.0.3",
