--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic front-end dev boilerplate",
   "main": "src/client/index.js",
   "scripts": {
-    "client-dev": "webpack-dev-server --colors --content-base public/ --hot --inline --host 127.0.0.1 --port 8877",
+    "client-dev": "webpack-dev-server --hot --content-base public/ --inline --config webpack.config.js",
     "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -37,6 +37,8 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "eslint": "^3.10.2",
+    "standard": "^8.6.0",
     "webpack-dev-server": "^1.15.0"
   }
 }
