--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic front-end dev boilerplate",
   "main": "src/client/index.js",
   "scripts": {
-    "client-dev": "webpack-dev-server --hot --content-base public/ --inline --config webpack.config.js",
+    "dev": "webpack-dev-server --hot --content-base public/ --inline --config webpack.config.js",
     "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
