--- a/package.json
+++ b/package.json
@@ -26,19 +26,23 @@
   },
   "homepage": "https://github.com/icareus/react-boilerplate#readme",
   "dependencies": {
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
     "ramda": "^0.22.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "webpack": "^1.13.2"
+    "redux": "^3.5.2"
   },
   "devDependencies": {
-    "eslint": "^3.10.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.24.1",
     "standard": "^8.6.0",
+    "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   }
 }
