--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --hot --content-base public/ --inline --config webpack.config.js",
     "build": "webpack -p",
+    "lint": "standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,10 +36,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.24.1",
     "standard": "^8.6.0",
